<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:visibility="visible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-60dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/intro_text1"
        android:textColor="@color/orange"
        android:textSize="29sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="390dp" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/registro_text2"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="454dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="366dp"
        android:layout_height="42dp"
        android:background="@drawable/border"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="489dp" />


    <Button
        android:id="@+id/button2"
        android:layout_width="366dp"
        android:layout_height="42dp"
        android:background="@drawable/border"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="579dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="208dp"
        android:layout_height="58dp"
        android:background="@drawable/rounded_button_blue"
        android:textColor="@color/white"
        android:text="@string/TextBotton_text4"
        tools:fontFamily="@font/poppins_bold"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="638dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/contraseña_text3"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="542dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="213dp"
        android:layout_height="34dp"
        android:fontFamily="@font/poppins"
        android:text="@string/contraseña_text5"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="713dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/registro_text6"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="807dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/registro_text7"
        android:textColor="@color/orange"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="807dp" />

</androidx.constraintlayout.widget.ConstraintLayout>